fix orders  gaps  desktop resolution

--- a/src/nextpage.css
+++ b/src/nextpage.css
@@ -395,7 +395,7 @@ li {
     }
   }
 
-  .orders {
+  /* .orders {
     border-top: 1px solid #d0d0d0;
     margin: 0 30px;
     padding: 0 150px;
@@ -444,6 +444,49 @@ li {
         }
         .quantity {
           margin-right: 226px;
+        }
+      }
+    }
+  } */
+
+  .orders {
+    border-top: 1px solid #d0d0d0;
+    margin: 0 30px;
+    padding: 0 150px;
+
+    .ordertitle {
+      margin-top: 70px;
+      padding: 30px;
+      border-bottom: 1px solid #d0d0d0;
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      column-gap: 40px;
+    }
+
+    .border {
+      padding: 5px 0;
+      border-bottom: 1px solid #d0d0d0;
+
+      .data {
+        padding: 20px;
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        column-gap: 40px;
+        align-items: center;
+        color: #afafaf;
+
+        &:hover {
+          background-color: #f2f2f2;
+          color: black;
+          border-radius: 12px;
+        }
+
+        p {
+          display: block;
+        }
+
+        p::before {
+          display: none;
         }
       }
     }
